--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Overtrue\\LaravelFollow\\": "src"
+            "Marksihor\\LaravelMessaging\\": "src"
         }
     },
     "extra": {
